--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "mocha": "^4.0.1",
-    "mysql": "^2.15.0",
-    "mysql2": "^1.4.2",
+    "mysql2": "3.12.0",
     "nightmare": "^2.10.0",
     "sequelize": "^4.22.0"
   }
