--- a/config/config.json
+++ b/config/config.json
@@ -1,17 +1,17 @@
 {
   "development": {
-    "username": "root",
-    "password": "",
-    "database": "spaceinvaders_development",
-    "host": "127.0.0.1",
+    "username": "user",
+    "password": "password",
+    "database": "space_invader_database",
+    "host": "mysql",
     "dialect": "mysql"
   },
   "test": {
-    "use_env_variable": "JAWSDB_URL",
+    "use_env_variable": "DB_URL",
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "use_env_variable": "DB_URL",
     "dialect": "mysql"
   }
 }
