--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Space invaders arcade game",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/test.js",
     "start": "node server.js"
   },
   "repository": {
