--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+name: spaceinvaders
 services:
   mysql:
     image: mysql:8.2
@@ -23,3 +24,9 @@ services:
       - .env
     ports:
       - "8080:8080"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/" ]
+      interval: 30s
+      timeout: 5s
+      retries: 2
+      start_period: 5s
