--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/janisnjohn/spaceInvaders#readme",
   "dependencies": {
+    "axios": "^1.8.1",
     "chai": "^4.1.2",
+    "cheerio": "^1.0.0",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "mocha": "^4.0.1",
