MOD: refactor into front and backend

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ DB_NAME=space_invader_database
 DB_USER=user
 DB_PASS=password
 DB_HOST=mysql
-PORT=8080
-GAME_URL=localhost:8080
+BACKEND_HOST=localhost
+BACKEND_PORT=8080
