--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
       timeout: 5s
       retries: 2
       start_period: 5s
-  space_invaders:
+  space_invaders_backend:
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
     depends_on:
       mysql:
@@ -25,8 +25,25 @@ services:
     ports:
       - "8080:8080"
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8080/" ]
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/api/leaderboard" ]
       interval: 30s
       timeout: 5s
-      retries: 2
+      retries: 5
+      start_period: 5s
+  space_invaders_frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    depends_on:
+      space_invaders_backend:
+        condition: service_healthy
+    env_file:
+      - .env
+    ports:
+      - "3000:3000"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:3000/" ]
+      interval: 30s
+      timeout: 5s
+      retries: 5
       start_period: 5s
