--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Space invaders arcade game",
   "main": "server.js",
   "scripts": {
-    "test": "mocha test/test.js",
-    "start": "node server.js"
+    "test": "mocha test/test.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,7 @@
   "homepage": "https://github.com/janisnjohn/spaceInvaders#readme",
   "dependencies": {
     "axios": "^1.8.1",
+    "body-parser": "^1.20.3",
     "chai": "^4.1.2",
     "cheerio": "^1.0.0",
     "express": "^4.16.2",
